--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "lib/ds-math"]
 	path = lib/ds-math
-	url = https://github.com/dapphub/ds-math
+	url = https://github.com/dapphub/ds-math.git
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+	branch = v1.2.0
