--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: 'recursive'
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
